# AdamLibSDL3

./: .gitignore  CMakeLists.txt  Concepts.txt  README.md  To Do  a.sh  alias.sh  main.cpp
CodeForCustomTypes/: TemplateForNewNode.hpp
README/: instructions.html  instructions.md
examples/: CMakeLists.txt  main.cpp  test.hpp  testgame.cpp
include/AdamLib/: Defines.hpp  Input.hpp  Math.hpp  Signal.hpp  To Do
include/AdamLib/Collision/: AABB.hpp  CollisionDetector.hpp  CollisionShapes.hpp  To Do
include/AdamLib/Core/: AdamLib.hpp  Input.hpp  Rendering.hpp  To Do  Window.hpp
include/AdamLib/Nodes/: CollisionNode.hpp  Node.hpp  SpriteNode.hpp  To Do
include/AdamLib/Resources/: ResManager.hpp  Resource.hpp  Texture.hpp
include/AdamLib/Utilities/: Math.hpp  Signal.hpp  math-WIP.hpp
src/: CMakeLists.txt  inputs.cpp  math.cpp
src/Collision/: AABB.cpp  AABB.hpp  collisiondetector.cpp  collisionshapes.cpp  cute_c2.hpp  cute_c2_impl.cpp
src/Core/: AdamLib.cpp  RendererInternal.hpp  WindowInternal.hpp  inputs.cpp  renderer.cpp  window.cpp
src/Input/: inputs.cpp
src/Node/: node.cpp
src/Nodes/: collisionnode.cpp  node.cpp  spritenode.cpp
src/Renderer/: renderer.cpp
src/Rendering/: rendering.cpp
src/Resources/: ResManager.hpp  ResourcesInternal.hpp  manager.cpp  textures.cpp
src/Resources/Textures/: textures.cpp
src/Utilities/: math.cpp  signal.cpp
src/Window/: window.cpp
src/include/: Input.h  Math.h  Node.h  Rendering.h  ResManager.h  Resource.h  Signal.h  Texture.h  Textures.h  Window.h
